--- a/todo-client/package.json
+++ b/todo-client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "babel-plugin-import": "^1.13.5",
     "craco-less": "^2.0.0",
+    "dayjs": "^1.11.7",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
