--- a/todo-client/package.json
+++ b/todo-client/package.json
@@ -15,6 +15,8 @@
     "dayjs": "^1.11.7",
     "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
+    "qs": "^6.11.0",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.0.0",
