--- a/todo-client/package.json
+++ b/todo-client/package.json
@@ -2,15 +2,21 @@
   "name": "todo-client",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-plugin-import": "^1.13.6"
+  },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.20.5",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.13",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@craco/craco": "^7.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.0.4",
     "axios": "^1.2.1",
-    "babel-plugin-import": "^1.13.5",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.7",
     "mobx": "^6.7.0",
@@ -24,9 +30,6 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start1": "react-scripts start",
-    "build1": "react-scripts build",
-    "test1": "react-scripts test",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
@@ -49,10 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "7.1.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0"
   }
 }
