--- a/todo-server/package.json
+++ b/todo-server/package.json
@@ -8,8 +8,7 @@
     "express-validator": "^6.14.2",
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "pm2": "^5.2.2"
+    "mysql": "^2.18.1"
   },
   "scripts": {
     "normal": "node app.js",
