--- a/todo-client/package.json
+++ b/todo-client/package.json
@@ -2,6 +2,7 @@
   "name": "todo-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
