--- a/todo-server/DockerFile
+++ b/todo-server/DockerFile
@@ -1,11 +1,17 @@
 # 镜像版本
-FROM node
+FROM node:14.17
+
+# 镜像作者
+LABEL maintainer="19A"
 
 # 工作目录
-WORKDIR /node
+WORKDIR /todo/server
 
 # 制文件到容器里指定路径
-COPY . /node
+COPY . /todo/server
+
+# 环境变量
+ENV NODE_ENV=production
 
 # 设置依赖下载地址
 RUN yarn config set registry "https://registry.npm.taobao.org/"
@@ -18,3 +24,6 @@ EXPOSE 3000 8888
 
 # 启动
 CMD yarn start
+# 注：RUN 是在 docker build , CMD 在docker run 时运行。 
+
+
