--- a/todo-client/package.json
+++ b/todo-client/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-import": "^1.13.6"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-decorators": "^7.20.13",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
