--- a/todo-server/DockerFile
+++ b/todo-server/DockerFile
@@ -19,6 +19,9 @@ RUN yarn config set registry "https://registry.npm.taobao.org/"
 # 拉取依赖
 RUN yarn
 
+# 解决node容器启动报错
+RUN yarn add global nodemon
+
 # 暴露端口
 EXPOSE 3000 8888
 
