--- a/bill-client/package.json
+++ b/bill-client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.0.4",
+    "antd-mobile": "^5.28.1",
     "axios": "^1.2.1",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.7",
