--- a/hello-node/package.json
+++ b/hello-node/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"dev:cjs": "node src/cjs/index.cjs", 
-	"dev:esm": "node src/esm/index.mjs", 
+    "dev:cjs": "node src/cjs/index.cjs",
+    "dev:esm": "node src/esm/index.mjs",
+    "dev:ts": "node src/ts/index.ts",
+    "serve": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "md5": "^2.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
+  }
 }
