--- a/hello-node/package.json
+++ b/hello-node/package.json
@@ -3,19 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type":"modules",
   "scripts": {
     "dev:cjs": "node src/cjs/index.cjs",
     "dev:esm": "node src/esm/index.mjs",
-    "dev:ts": "node src/ts/index.ts",
-    "serve": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:ts": "ts-node src/ts/index.ts",
+    "compile": "babel src/babel --out-dir compiled",
+    "serve": "node server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "md5": "^2.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2"
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "md5": "^2.3.0"
   }
 }
