--- a/hello-node/package.json
+++ b/hello-node/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev:cjs": "node src/cjs/index.cjs",
     "dev:esm": "node src/esm/index.mjs",
-    "dev:ts": "node src/ts/index.ts",
-    "build": "tsc src/ts/index.ts --outDir dist",
+    "dev:ts": "ts-node src/ts/test.ts",
+    "build": "tsc src/tsc/index.ts --outDir dist --target es6",
     "compile": "babel src/babel --out-dir compiled",
     "serve": "node server/index.js"
   },
@@ -18,6 +18,7 @@
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.3",
     "@babel/preset-env": "^7.20.2",
+    "@types/md5": "^2.3.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
