--- a/hello-node/tsconfig.json
+++ b/hello-node/tsconfig.json
@@ -1,17 +1,16 @@
 {
   "compilerOptions": {
-    // "target": "es6",
     // "module": "ES6",
-    // "outDir": "./dist"
-    "target": "es2015" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
-    "module": "commonjs",
-    "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "outDir": "./dist",
+    "target": "es6" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
+    "module": "es6",
+    // "strict": true,
+    // "moduleResolution": "node",
+    // "esModuleInterop": true,
+    // "skipLibCheck": true,
+    // "forceConsistentCasingInFileNames": true
   },
-  "ts-node": {
-    "esm": true
-  }
+  // "ts-node": {
+  //   "esm": true
+  // }
 }
